--- a/config/database.yml
+++ b/config/database.yml
@@ -19,6 +19,7 @@ default: &default
 
 development:
   <<: *default
+  adapter: mysql2
   database: original_app_development
 
 # Warning: The database defined as "test" will be erased and
@@ -26,6 +27,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter: mysql2
   database: original_app_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
@@ -49,6 +51,8 @@ test:
 #
 production:
   <<: *default
+  adapter: postgresql
   database: original_app_production
-  username: original_app
-  password: <%= ENV['ORIGINAL_APP_DATABASE_PASSWORD'] %>
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
