--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.0-alpha3",
     "chart.js": "^4.2.1",
     "chartkick": "^5.0.1",
+    "jquery": "^3.6.4",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
